--- a/locales/es.json
+++ b/locales/es.json
@@ -266,6 +266,10 @@
         "stop": "parar",
         "tally": "lanzar recuento",
         "publish": "publicar"
+    },
+    "import": {
+        "desc": "Importar una votación desde tsv te permite administrar y automatizar la creación de votaciones de forma externa. <a href=\"#\">Lee más acerca de el formato de votación TSV aquí</a>. Si quieres crear varias votaciones a la vez, puedes user la API o contactar con nosotros.",
+        "file": "Selecciona un fichero"
     }
   }
 }
