small login design improvements

--- a/locales/en.json
+++ b/locales/en.json
@@ -171,7 +171,7 @@
     "createElection": "Looking to create an election?",
     "takeLook": "Take a look at the",
     "step": "step by step guide",
-    "forgotPassword": "Forgot my password",
+    "forgotPassword": "Forgot your password?",
     "loginButton": "Enter",
 
     "registerHeader": "Register",
