--- a/locales/es.json
+++ b/locales/es.json
@@ -173,7 +173,7 @@
     "createElection": "¿Buscas crear una votación?",
     "takeLook": "Echa un vistazo a la",
     "step": "guia paso a paso",
-    "forgotPassword": "Olvidé mi contraseña",
+    "forgotPassword": "¿Olvidaste tu contraseña?",
     "loginButton": "Entrar",
 
     "registerHeader": "Registro",
