--- a/locales/es.json
+++ b/locales/es.json
@@ -293,7 +293,8 @@
         "optionvotes": "Votos a opciones",
         "option": "Candidatura",
         "votes": "Votos",
-        "winner": "Posición ganadora"
+        "winner": "Posición ganadora",
+        "publicResultsUrl": "Url pública de resultados"
     }
   }
 }
