--- a/locales/es.json
+++ b/locales/es.json
@@ -45,14 +45,17 @@
     "tooManyUserUpdates": "No se pudo registrar el voto, debido a que lo has cambiado demasiadas veces en esta votación. Por tanto, el último voto que hayas emitido es el que queda registrado.",
 
     "questionSelectedOptionsTitle": "opciones seleccionadas (__count__)",
+    "questionSelectedOptionsTitle_plural": "opciones seleccionadas (__count__)",
     "questionAvailableOptionsTitle": "opciones disponibles",
     "numOptionsSelected": "__count__ opciones seleccionadas.",
+    "numOptionsSelected_plural": "__count__ opciones seleccionadas.",
     "noOptionsSelected": "Ninguna opción seleccionada.",
     "numOptionsLimits": "Selecciona entre __min__ y __max__ opciones.",
     "filterOptionsPlaceholder": "filtrar..",
     "noResults": "el filtro no produjo resultados.",
     "numSelectedOptionsSmall": "__count__ opciones seleccionadas",
     "selectMoreOpts": "Debes seleccionar al menos __min__ opciones.",
+    "selectMoreOpts_plural": "Debes seleccionar al menos __min__ opciones.",
     "maxSelectedLimitReached": "No puedes seleccionar más opciones (máximo __max__). Para seleccionar una opción, deselecciona otra primero.",
     "alreadySelectedDocumentType": "No puedes seleccionar dos documentos del mismo tipo, deselecciónalo primero antes.",
     "alreadySelectedPack": "Seleccionaste una opción vinculada a otros documentos más. No es posible seleccionarlo de forma aislada.",
