--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "eg": "eg.",
   "next": "Next",
   "done": "Done",
   "loading": "Loading...",
@@ -332,7 +333,10 @@
         "manage": "Manage census",
         "name": "Name",
         "required": "Required",
-        "add": "Add"
+        "add": "Add",
+        "manualAdd": "Manual add",
+        "massive1": "CSV file, use semicolon to split fields",
+        "massive2": "one voter per line, keep the field order"
     }
   }
 }
