--- a/locales/es.json
+++ b/locales/es.json
@@ -340,6 +340,18 @@
         "manualAdd": "Añadir a mano",
         "massive1": "Fichero CSV, usa punto y coma para separar lo campos",
         "massive2": "un votante por línea, mantén el orden de los campos"
+    },
+    "auth": {
+        "intro": "La autenticación se usa para asegurar que un elector es quien dice ser. Aquí tienes que llegar a un compromiso entre seguridad, usabilidad y coste",
+        "auth": "Método de autenticación",
+        "auths": {"email": "Correo electrónico", "sms": "SMS"},
+        "sms": "Mensaje SMS",
+        "smstemp": "Plantilla usada en el SMS a enviar al usuario. Usa %(code)s para insertar el código SMS",
+        "smsdef": "Este es tu código de votación %(code)s",
+        "email": "Mensaje por correo elelectrónico",
+        "emailsub": "Asúnto del correo",
+        "emailtemp": "Plantilla usada en el correo para enviar a los usuarios. Usa %(code)s para añadir el código de acceso y %(link)s para insertar el enlace de votación",
+        "emaildef": "Vota siguiendo este enlace %(link)s\nEste es tu código de autenticación: %(code)s"
     }
   }
 }
