--- a/locales/es.json
+++ b/locales/es.json
@@ -174,6 +174,7 @@
     "logout": "Salir",
     "codeLabel": "Código de Autenticación",
     "emailLabel": "Correo electrónico",
+    "telLabel": "Teléfono",
     "emailPlaceholder": "fulanito@ejemplo.com",
     "passwordLabel": "Contraseña",
     "passwordPlaceholder": "contraseña",
@@ -196,6 +197,7 @@
     "tlfError": "Teléfono incorrecto",
     "dniError": "DNI ejemplo 12345678H",
     "emailError": "Email incorrecto",
+    "telError": "Teléfono incorrecto",
 
     "validateHeader": "Código de validación",
     "validateButton": "Validar",
