--- a/locales/en.json
+++ b/locales/en.json
@@ -134,7 +134,9 @@
     "locatorSearchingStatus": "<span class=\"text-primary\">Buscando localizador..</span>",
     "locatorFoundStatus": "<span class=\"text-success\">¡Localizador encontrado!</span>",
     "locatorNotFoundStatus": "<span class=\"text-danger\">Localizador no encontrado</span>",
-    "locatorInfoText": "Ejemplo de localizador: 78a319dbd699c5d6ff08ca08990b395e593bcb8282a7660417a50d0ee470503f"
+    "locatorInfoText": "Ejemplo de localizador: 78a319dbd699c5d6ff08ca08990b395e593bcb8282a7660417a50d0ee470503f",
+
+    "thisisADemoNotification": "<span class=\"glyphicon glyphicon-info-sign\" aria-hidden=\"true\"></span> <strong>¡Atención!</strong> Cabina de votación de prueba, los votos emitidos aquí no cuentan."
   },
   "avElection": {
     "resultsLoadingText": "Loading results",
