making election links a shared directive

--- a/locales/en.json
+++ b/locales/en.json
@@ -158,6 +158,7 @@
     "errorLoadingQuestionTest": "Unknown question layout",
 
     "public": {
+      "homeText": "Home",
       "loadingText": "Loading election",
       "loadingDataText": "Cargando datos..",
       "shareLink": "Tweet this election!",
