--- a/locales/en.json
+++ b/locales/en.json
@@ -385,8 +385,8 @@
         "smsdef": "This is your vote code: %(code)",
         "email": "Email message",
         "emailsub": "Email subject",
-        "emailtemp": "Template used in the Email link to send to the user. Use %(code)s to insert the login code and %(link)s to insert the election link",
-        "emaildef": "Vote following this link %(link)s\nThis is your auth code: %(code)s"
+        "emailtemp": "Template used in the Email link to send to the user. Use %(code)s to insert the login code and %(url)s to insert the election link",
+        "emaildef": "Vote following this link %(url)s\nThis is your auth code: %(code)s"
     },
     "create": {
         "summary": "Summary",
